--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,85 @@
   }
 }
 
-.title {
-  font-size: 18px;
+/* .title {
+  font-size: 24px;
+} */
+
+h1 {
+  font-size: 2.4em;
+}
+
+h2 {
+  font-size: 1.4em;
+}
+
+.suptitle {
+  color:gray;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+}
+
+.col {
+  flex-direction: column;
+}
+
+a {
+  display: inline-block;
+  padding: 5px 7%;
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  opacity: 70%;
+  transition-duration: 0.2s;
+}
+
+section {
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: center;
+  scroll-behavior: smooth;
+}
+
+.image-cover {
+  border-radius: 50%;
+  max-width: 20%;
+  height: auto;
+}
+
+.image-project {
+  max-width: 40%;
+  height: auto;
+  min-height: 50px;
+}
+
+.icon {
+  max-height: 1.2em;
+}
+
+header > nav {
+  max-width: 300px;
+}
+
+.project-card {
+  min-width: 50px;
+  width: 40%;
+}
+
+button {
+  padding: 1.2em;
+  background-color: darkorange;
+  border: none;
+  border-radius: 0.2em;
 }
